# mypytools

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
mypytools/: __init__.py  env.py  hello.py  sacct_checker.py
mypytools/aims/: band.py  constants.py  cube_grids.py  load_matrices.py  move_ri_output.py  parse_out.py  ri_ovlp_blocks_rebuilt.py  ri_ovlp_blocks_svd.py  rs_matrices.py
mypytools/data_proc/: __init__.py  correlation.py  descriptor.py  e3.py  evd.py  fit_peaks.py  mpi.py  ridge_regression.py  sampling.py  svd.py  utils.py
mypytools/gpu/: monitor_cuda_devices.py  monitor_cuda_devices_minimal.py  plot_gpu_usage.py
mypytools/io/: _harmonic_sampling.py  cube.py  gen_structure.py  harmonic_sampling.py  ipi.py  relax_atoms.py  xyz2geomin.py
mypytools/mpi/: __init__.py  cal_phonon_ase_mpi.py  phonons.py  tqdm.py  utils.py
mypytools/patch/: __init__.py  path.py
mypytools/pkg_utils/: __init__.py  ase.py  ase_phonon.py  ase_relax_atoms.py  phonopy.py  relax_by_spring.py  salted.py  salted_block_svd_compute.py  salted_block_svd_reconstruct.py  salted_prediction.py  salted_ri_ovlp_blocks_svd_mpi.py  salted_svd_compute.py  salted_svd_reconstruct.py
mypytools/salted_utils/: descriptor.py
mypytools/shell/: __init__.py  utils.py
mypytools/viz/: cell.py  cube_diff.py  cube_ops.py  ph_mode.py  ph_unfold.py  svg.py
tests/: conftest.py  test_env.py  test_rs_matrices.py
tests/data/: README.md
tests/data/tag_output_rs_matrices_h5_250806/: aims.out  band1001.out  band1002.out  band1003.out  basis-indices.out  bg_primcell_ab_z100.xyz  control.in  geometry.in  hamiltonian.out  overlap-matrix.out  rs_hamiltonian.h5  rs_hamiltonian.out  rs_indices.out  rs_overlap.h5  rs_overlap.out  run_aims.sbatch.sh  test_bg_tags.313141.err  test_bg_tags.313141.out
tests/test_aims/: __init__.py  test_rs_matrices.py
