[project]
name = "mypytools"
version = "0.0.1"
description = "A collection of tools for python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "BSD-3-Clause"}
authors = [{name = "Zekun Lou", email = "zekunlou+mypytools@gmail.com"}]
keywords = ["python", "tools", "mypytools", "personal", "dangerous"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.5",
    "matplotlib>=3.8.0",
    "tqdm>=4.45.0",
    "p_tqdm>=1.4.0",
    "pytest>=7.0.0",
    "tomli>=1.0.0",
    "shapely>=2.0.3",
]

[project.optional-dependencies]
ase = ["ase>=3.22.1"]

[project.scripts]
mpt_hello = "mypytools.hello:say_hello"

[project.urls]
Repository = "https://github.com/nqhq-lou/mypytools"
